--- a/public/style.css
+++ b/public/style.css
@@ -12,6 +12,11 @@
     --shadow-03 :0 1rem 3rem rgba(0,0,0,.175);
 }
 
+.body-bg {
+            background-color: #9921e8;
+            background-image: linear-gradient(315deg, #9921e8 0%, #5f72be 74%);
+        }
+
 hr {
     border:none;
     border-bottom: 1px solid #e9e9e9;
