--- a/views/layouts/menu.ejs
+++ b/views/layouts/menu.ejs
@@ -4,13 +4,19 @@
       <a href="/"><i class="fa fa-user-md"></i> Profile</a>
     </li>
     <li>
-      <a href="#"><i class="fa fa-edit"></i> Edit</a>
+      <a href="/profile-edit"><i class="fa fa-edit"></i> Edit</a>
     </li>
     <li>
       <a href="/pass-change"><i class="fa fa-unlock-alt"></i> Change Password</a>
     </li>
     <li>
       <a href="/photo-up"><i class="fa fa-camera"></i> Profile Photo</a>
+    </li>
+    <li>
+      <a href="/gallery-up"><i class="fa fa-file-image-o"></i>Gallery</a>
+    </li>
+    <li>
+      <a href="/photo-up"><i class="fa fa-user-plus"></i>Find friends</a>
     </li>
     <li>
       <a href="/logout"><i class="fa fa-sign-out"></i> Logout</a>
