--- a/views/login.ejs
+++ b/views/login.ejs
@@ -55,6 +55,11 @@
         </button>
       </form>
     </section>
+    <div class="social-login">
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-google"></i></a>
+        <a href="#"><i class="fa fa-github"></i></a>
+      </div>
   </main>
 
   <div class="max-w-lg mx-auto text-center mt-12 mb-6">
