--- a/views/layouts/info.ejs
+++ b/views/layouts/info.ejs
@@ -1,4 +1,8 @@
 <div class="user info">
-  <img src="./images/avatar.png" alt="" />
+  <% if (user.photo) { %>
+  <img src="./media/users/<%= user.photo %>" />
+  <% } else { %>
+  <img src="./images/avatar.png" alt="avatar" />
+  <% } %>
   <h3><%= user.name %></h3>
 </div>
