gallery page done

--- a/views/layouts/menu.ejs
+++ b/views/layouts/menu.ejs
@@ -1,10 +1,10 @@
 <div class="user-menu">
-  <ul>
+  <ul class="">
     <li class="active">
-      <a href="/"><i class="fa fa-user-md"></i> Profile</a>
+      <a class="text-slate-700" href="/"><i class="fa-solid fa-circle-user"></i> Profile</a>
     </li>
     <li>
-      <a href="/profile-edit"><i class="fa fa-edit"></i> Edit</a>
+      <a href="/profile-edit"><i class="fa-solid fa-user-pen"></i> Edit</a>
     </li>
     <li>
       <a href="/pass-change"><i class="fa fa-unlock-alt"></i> Change Password</a>
@@ -13,10 +13,10 @@
       <a href="/photo-up"><i class="fa fa-camera"></i> Profile Photo</a>
     </li>
     <li>
-      <a href="/gallery-up"><i class="fa fa-file-image-o"></i>Gallery</a>
+      <a href="/gallery-up"><i class="fa-regular fa-images"></i> Gallery</a>
     </li>
     <li>
-      <a href="/photo-up"><i class="fa fa-user-plus"></i>Find friends</a>
+      <a href="/photo-up"><i class="fa-solid fa-user-group"></i> Find friends</a>
     </li>
     <li>
       <a href="/logout"><i class="fa fa-sign-out"></i> Logout</a>
