--- a/public/style.css
+++ b/public/style.css
@@ -197,6 +197,7 @@ a:hover {
   height: 100px;
   object-fit: cover;
   border-radius: 50%;
+  margin-left: 8rem;
 }
 
 .user-menu {
@@ -257,14 +258,10 @@ a:hover {
 }
 
 .profile-photo img {
-  width: 300px;
-  height: 300px;
+  width: 150px;
+  height: 150px;
   object-fit: cover;
-  border-radius: 15px;
-}
-
-.profile-photo h2 {
-  font-weight: 200;
+  /* border-radius: 15px; */
 }
 
 .box-content h2 {
