--- a/views/layouts/info.ejs
+++ b/views/layouts/info.ejs
@@ -1,8 +1,12 @@
 <div class="user info">
   <% if (user.photo) { %>
-  <img src="./media/users/<%= user.photo %>" />
+  <img
+    class="hover:border-2 border-teal-700 transition ease-in-out duration-500"
+    src="./media/users/<%= user.photo %>"
+  />
   <% } else { %>
   <img src="./images/avatar.png" alt="avatar" />
   <% } %>
-  <h3><%= user.name %></h3>
+  <h3 class="text-orange-500 text-bold"><%= user.name %></h3>
+  <h3 class="mb-4"><%= user.email %></h3>
 </div>
