pass change success

--- a/views/layouts/menu.ejs
+++ b/views/layouts/menu.ejs
@@ -16,7 +16,7 @@
       <a href="/gallery-up"><i class="fa-regular fa-images"></i> Gallery</a>
     </li>
     <li>
-      <a href="/photo-up"><i class="fa-solid fa-user-group"></i> Find friends</a>
+      <a href="/find"><i class="fa-solid fa-user-group"></i> Find friends</a>
     </li>
     <li>
       <a href="/logout"><i class="fa fa-sign-out"></i> Logout</a>
