forget pass problem

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -42,7 +42,7 @@
         </div>
         <div class="flex justify-end">
           <a
-            href="/pass-change"
+            href="/forget-pass"
             class="text-sm text-purple-600 hover:text-purple-700 hover:underline mb-6"
             >Forgot your password?</a
           >
