--- a/views/single.ejs
+++ b/views/single.ejs
@@ -17,7 +17,8 @@
             <h2 class="font-bold text-3xl"><%= show.name %></h2>
             <p><%= show.email %></p>
             <p class="follows text-xs text-red-600 cursor-pointer">
-              1k followers <span class="text-black relative bottom-1">.</span> 2k following
+              <%= show.following.length %> following <span class="text-black relative bottom-1">.</span> <%=
+              show.follower.length %> follower
             </p>
           </div>
         </div>
