--- a/views/friends.ejs
+++ b/views/friends.ejs
@@ -8,17 +8,28 @@
     <div class="profile-box">
       <div class="box-content">
         <h2>Find friends</h2>
-        <div class="friend-area flex items-center wrap gap-2">
+        <div class="friend-area flex items-center flex-wrap gap-2">
           <% friendData.forEach(data => { %>
-            <div class="friend-item w-1/2 border-2 border-teal-300 flex items-center gap-4 p-2 mb-3">
+            <div class="friend-item w-96 border-2 border-teal-300 flex items-center gap-4 p-2 mb-3">
               <a href="/<%= data._id %>">
-                <img class="rounded-full w-24 h-20 object-cover" src="./media/users/<%= data.photo %>" alt="">
+                
+                <% if (data.photo) { %>
+                  <img class="rounded-full w-24 h-20 object-cover" src="./media/users/<%= data.photo %>" alt="">
+          <% } else { %>
+          <img class="profile-preview rounded-full" src="./images/avatar.png" alt="avatar" />
+          <% } %>              
+                
               </a>
               <div class="friend-content">
                 <p class="text-gray-900 font-bold"><%= data.name %></p>
                 <p class="text-gray-700 text-base"><%= data.email %></p>
-                <a class="block mt-2 bg-cyan-500 text-white px-4 py-1 rounded w-fit" href="#">Follow</a>
-                <!-- <a class="block mt-2 bg-gray-500 text-white px-4 py-1 rounded w-fit" href="#">Unfollow</a> -->
+
+                <% let follow = user.following.some(file => file == data._id)  %> 
+                <% if (follow) { %>
+                  <a class="block mt-2 bg-gray-500 text-white px-4 py-1 rounded w-fit" href="/unfollow/<%= data.id %>">Unfollow</a>
+                <% } else {%>
+                  <a class="block mt-2 bg-cyan-500 text-white px-4 py-1 rounded w-fit" href="/follow/<%= data.id %>">Follow</a>
+                <% }%>
               </div>
             </div>
           <% }) %>
