--- a/views/layouts/app.ejs
+++ b/views/layouts/app.ejs
@@ -7,7 +7,8 @@
     <title>Profile Login</title>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
     <link href="//fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="./style.css" />
+    <script src="//cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <%- body %>
@@ -41,6 +42,5 @@
         };
       }
     </script>
-    <script src="//cdn.tailwindcss.com"></script>
   </body>
 </html>
