--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,8 +1,5 @@
 <!-- new one with  -->
-<section
-  class="body-bg min-h-screen pt-12 md:pt-20 pb-6 px-2 md:px-0"
-  style="font-family: 'Lato', sans-serif"
->
+<section class="body-bg min-h-screen pt-12 md:pt-20 pb-6 px-2 md:px-0" style="font-family: 'Lato', sans-serif">
   <header class="max-w-lg mx-auto">
     <a href="#">
       <h1 class="text-4xl font-bold text-white text-center text-uppercase">application</h1>
@@ -20,30 +17,28 @@
 
     <section class="mt-10">
       <form class="flex flex-col" method="POST" action="/login">
-        <div class="mb-6 pt-3 rounded bg-gray-200">
-          <label class="block text-gray-700 text-sm font-bold mb-2 ml-3" for="email">Email</label>
+        <div class="mb-6 pt-3">
+          <label class="block text-sm font-bold mb-2 ml-3" for="email">Email</label>
           <input
-            type="text"
+            type="email"
             id="email"
             name="email"
-            class="bg-gray-200 rounded w-full text-gray-700 focus:outline-none border-b-4 border-gray-300 focus:border-purple-600 transition duration-500 px-3 pb-3"
+            class="rounded w-full bg-gray-300/50 focus:outline-none transition duration-300 ring-teal-600/50 focus:ring-0 ring-2 p-3"
           />
         </div>
-        <div class="mb-6 pt-3 rounded bg-gray-200">
-          <label class="block text-gray-700 text-sm font-bold mb-2 ml-3" for="password"
-            >Password</label
-          >
+        <div class="mb-6 pt-3">
+          <label class="block text-sm font-bold mb-2 ml-3" for="password">Password</label>
           <input
             type="password"
             name="password"
             id="password"
-            class="bg-gray-200 rounded w-full text-gray-700 focus:outline-none border-b-4 border-gray-300 focus:border-purple-600 transition duration-500 px-3 pb-3"
+            class="rounded w-full bg-gray-300/50 focus:outline-none transition duration-300 ring-amber-600 focus:ring-0 ring-2 p-3"
           />
         </div>
         <div class="flex justify-end">
           <a
             href="/forget-pass"
-            class="text-sm text-purple-600 hover:text-purple-700 hover:underline mb-6"
+            class="text-sm text-purple-600 hover:text-purple-700 transition ease-in-out duration-400 hover:text-purple-300  mb-6"
             >Forgot your password?</a
           >
         </div>
@@ -56,10 +51,10 @@
       </form>
     </section>
     <div class="social-login">
-        <a href="#"><i class="fa fa-facebook"></i></a>
-        <a href="#"><i class="fa fa-google"></i></a>
-        <a href="#"><i class="fa fa-github"></i></a>
-      </div>
+      <a href="#"><i class="fa fa-facebook"></i></a>
+      <a href="#"><i class="fa fa-google"></i></a>
+      <a href="#"><i class="fa fa-github"></i></a>
+    </div>
   </main>
 
   <div class="max-w-lg mx-auto text-center mt-12 mb-6">
