--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,7 +1,4 @@
-<section
-  class="body-bg min-h-screen pt-8 md:pt-9 pb-6 px-2 md:px-0"
-  style="font-family: 'Lato', sans-serif"
->
+<section class="body-bg min-h-screen pt-8 md:pt-9 pb-6 px-2 md:px-0" style="font-family: 'Lato', sans-serif">
   <header class="max-w-lg mx-auto">
     <a href="#">
       <h1 class="text-4xl font-bold text-white text-center text-uppercase">application</h1>
@@ -19,41 +16,32 @@
 
     <section class="mt-10">
       <form class="flex flex-col" method="POST" action="/register">
-        <div class="mb-6 pt-3 rounded bg-gray-200">
-          <label class="block text-gray-700 text-sm font-bold mb-2 ml-3" for="name">Name</label>
+        <div class="mb-6 pt-3 rounded">
+          <label class="block text-sm font-bold mb-2 ml-3" for="name">Name</label>
           <input
             type="text"
             id="name"
             name="name"
-            class="bg-gray-200 rounded w-full text-gray-700 focus:outline-none border-b-4 border-gray-300 focus:border-purple-600 transition duration-500 px-3 pb-3"
+            class="rounded w-full bg-gray-300/50 focus:outline-none transition duration-300 focus:ring-cyan-600 focus:ring-0 ring-2 p-3"
           />
         </div>
-        <div class="mb-6 pt-3 rounded bg-gray-200">
-          <label class="block text-gray-700 text-sm font-bold mb-2 ml-3" for="email">Email</label>
+        <div class="mb-6 pt-3">
+          <label class="block text-sm font-bold mb-2 ml-3" for="email">Email</label>
           <input
             type="email"
             id="email"
             name="email"
-            class="bg-gray-200 rounded w-full text-gray-700 focus:outline-none border-b-4 border-gray-300 focus:border-purple-600 transition duration-500 px-3 py-3"
+            class="rounded w-full bg-gray-300/50 focus:outline-none transition duration-300 ring-teal-600/50 focus:ring-0 ring-2 p-3"
           />
         </div>
-        <div class="mb-6 pt-3 rounded bg-gray-200">
-          <label class="block text-gray-700 text-sm font-bold mb-2 ml-3" for="password"
-            >Password</label
-          >
+        <div class="mb-6 pt-3">
+          <label class="block text-sm font-bold mb-2 ml-3" for="password">Password</label>
           <input
             type="password"
             name="password"
             id="password"
-            class="bg-gray-200 rounded w-full text-gray-700 focus:outline-none border-b-4 border-gray-300 focus:border-purple-600 transition duration-500 px-2 pb-3"
+            class="rounded w-full bg-gray-300/50 focus:outline-none transition duration-300 ring-amber-600 focus:ring-0 ring-2 p-3"
           />
-        </div>
-        <div class="flex justify-end">
-          <a
-            href="/login"
-            class="text-sm text-purple-600 hover:text-purple-700 hover:underline mb-6"
-            >Forgot your password?</a
-          >
         </div>
         <button
           class="bg-purple-600 hover:bg-purple-700 text-white font-bold py-2 rounded shadow-lg hover:shadow-xl transition duration-200"
@@ -65,13 +53,11 @@
     </section>
     <div class="social-login">
       <a href="#" class="shadow hover:shadow-blue-500/50 transition duration-500"
-        ><i class="fa fa-facebook"></i
+        ><i class="fab fa-facebook"></i
       ></a>
-      <a href="#" class="shadow hover:shadow-red-500/50 transition duration-500"
-        ><i class="fa fa-google"></i
-      ></a>
-      <a href="#" class="shadow hover:shadow-cyan-500/50 transition duration-500"
-        ><i class="fa fa-github"></i
+      <a href="#" class="shadow hover:shadow-red-500/50 transition duration-500"><i class="fab fa-google"></i></a>
+      <a href="//github.com/topujss" class="shadow hover:shadow-cyan-500/50 transition duration-500"
+        ><i class="fab fa-github"></i
       ></a>
     </div>
   </main>
