--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -16,27 +16,23 @@
           <form action="/profile-edit" method="post">
             <div class="form-group">
               <label for="name">Name</label>
-              <input id="name" name="name" type="text" />
-            </div>
-            <div class="form-group">
-              <label for="email">Email address</label>
-              <input id="email" name="email" type="email" />
+              <input id="name" name="name" value="<%= user.name %>" type="text" />
             </div>
             <div class="form-group">
               <label for="userme">Username</label>
-              <input id="userme" name="username" type="text" />
+              <input id="userme" name="username" value="<%= user.username %>" type="text" />
             </div>
             <div class="form-group">
               <label for="locate">Location</label>
-              <input id="locate" name="location" type="text" />
+              <input id="locate" name="location" value="<%= user.location %>" type="text" />
             </div>
             <div class="form-group">
               <label for="ph">Phone number</label>
-              <input id="ph" name="cell" type="text" />
+              <input id="ph" name="cell" value="<%= user.cell %>" type="text" />
             </div>
             <div class="form-group">
               <label for="ge">Gender</label>
-              <input id="ge" name="gender" type="text" />
+              <input id="ge" name="gender" value="<%= user.gender %>" type="text" />
             </div>
             <div class="form-group">
               <button type="submit">Update profile</button>
